# coara

./: .gitignore  SETUP.md  go.mod  go.sum
cmd/coara-cli/: main.go
configs/: coara-cli.yaml  coara-embed.yaml  coara-mcp.yaml
docs/: basic_design.md  detailed_designed_coara-cli.md  detailed_designed_coara-embed.md  detailed_designed_coara-mcp.md  interface_specification.md  requirements_specification.md
proto/coara/embed/v1/: coara_embed.proto
services/coara-embed/: pyproject.toml
services/coara-embed/app/: config.py  server.py
services/coara-embed/config/: profiles.yaml
services/coara-mcp/: pyproject.toml
services/coara-mcp/app/: config.py  server.py
