[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coara-mcp"
version = "0.1.0"
description = "coara MCP サーバ（HTTP + SSE）"
requires-python = ">=3.11"
dependencies = [
    # MCP サーバ
    "mcp>=1.0.0",
    # ASGI サーバ
    "uvicorn>=0.30.0",
    # HTTP クライアント
    "httpx>=0.27.0",
    # gRPC クライアント（coara-embed 呼び出し）
    "grpcio>=1.64.0",
    "protobuf>=5.27.0",
    # 設定
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
coara-mcp = "app.server:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
